# flask-frontend-hostname

./: .all-contributorsrc  Dockerfile  LICENSE  README.md  app.py  azure-pipelines.yml  deployment.yaml  main.py  pyproject.toml  test_hostname.py
.github/workflows/: codeql-analysis.yml
backend/: backend.py
blueprints/: hostname.py
templates/: home.html  layout.html
