[tool.poetry]
name = "flask-frontend-hostname"
version = "0.1.0"
description = "Front end for flask-backend-hostname"
authors = ["Nathan Drew <nath.drew@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
gunicorn = "^20.0.4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
